--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -5,7 +5,9 @@
    "id": "e7588254-89c4-4ad0-94d4-df629f2eb94c",
    "metadata": {},
    "source": [
-    "# Wind speed invertion"
+    "# Wind speed invertion\n",
+    "\n",
+    "This notebook example show how to invert wind speed from sigma0, using models from LUT or GMF, using [xsarsea.windspeed.invert_from_model](../basic_api.rst#xsarsea.windspeed.invert_from_model)"
    ]
   },
   {
@@ -66,7 +68,9 @@
    "source": [
     "## Get ancillary wind\n",
     "\n",
-    "Ecmwf wind is stored in owi file in *geographical* (deg N/S) convention. `xsarsea.windspeed` need it relative to *xtrack* (ie antenna), as a complex number\n"
+    "Ecmwf wind is stored in owi file in *geographical* (deg N/S) convention. `xsarsea.windspeed` need it relative to *xtrack* (ie antenna), as a complex number.\n",
+    "\n",
+    "We use [xsarsea.geo_dir_to_xtrack](../basic_api.rst#xsarsea.geo_dir_to_xtrack) to convert `sarwing_ds.owiEcmwfWindDirection` (deg) to radians, relative to xtrack, using `sarwing_ds.owiHeading`\n"
    ]
   },
   {
@@ -128,7 +132,9 @@
    "id": "b4128cac-1f6c-4db0-a3ed-4908fa3ec7ee",
    "metadata": {},
    "source": [
-    "## copol inversion"
+    "## Copol inversion\n",
+    "\n",
+    "Copol wind inversion, using model and ancillary wind"
    ]
   },
   {
@@ -175,7 +181,11 @@
    "id": "20a4a4cc-d209-4062-961f-0a6420c0fba4",
    "metadata": {},
    "source": [
-    "## crosspol inversion"
+    "## Crosspol inversion\n",
+    "\n",
+    "Sarwing crosspol inversion is done with model `sarwing_lut_cmodms1ahw`, that is only available from lut.\n",
+    "\n",
+    "So we use [xsarsea.windspeed.register_all_sarwing_luts](../basic_api.rst#xsarsea.windspeed.register_all_sarwing_luts) to register this lut.\n"
    ]
   },
   {
@@ -187,6 +197,14 @@
    "source": [
     "sarwing_luts_subset_path = xsarsea.get_test_file('sarwing_luts_subset')\n",
     "windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cb5a5ef-2af6-4a38-9830-6f2152f9703e",
+   "metadata": {},
+   "source": [
+    "To match sarwing outputs, we will flatten `sarwing_ds.owiNesz_cross` with [xsarsea.windspeed.nesz_flattening](../basic_api.rst#xsarsea.windspeed.nesz_flattening) , and compute `dsig_cr`"
    ]
   },
   {
@@ -226,7 +244,11 @@
    "id": "353cb230-406e-466b-a85b-af69530c155f",
    "metadata": {},
    "source": [
-    "## dualpol inversion"
+    "## Dualpol inversion\n",
+    "\n",
+    "Dualpol give better wind inversion results.\n",
+    "\n",
+    "Dualpol inversion also returns copol wind."
    ]
   },
   {
@@ -246,16 +268,6 @@
     "        ancillary_wind=sarwing_ds.owi_ancillary_wind,\n",
     "        dsig_cr = dsig_cr,\n",
     "        model=('gmf_cmod5n','sarwing_lut_cmodms1ahw'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0381e454-21ec-4e9e-829b-9658279c1eb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "windspeed_dual"
    ]
   },
   {
@@ -280,102 +292,6 @@
     "    hv.Image(windspeed_diff).opts(cmap='jet', clim=(-0.2,0.2), title='xsarsea-sarwing')\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ebed42be-b70d-410c-b40b-a29e36e6e791",
-   "metadata": {},
-   "source": [
-    "## Adding your own GMF\n",
-    "\n",
-    "A *Geophysical Modeling Function* (GMF) is a function that return a simulated *sigma0* from wind condition and instrument incidence angle.\n",
-    "\n",
-    "To register a new GMF with `xsarsea.windspeed`, you have to follow the following rules:\n",
-    "\n",
-    "  * parameters are `(incidence, windspeed, phi)`\n",
-    "    * `incidence` is in degrees\n",
-    "    * `windspeed` is in m/s\n",
-    "    * `phi` is wind direction, in degrees, relative to antenna look (0 is downwind in the antenna direction)\n",
-    "    \n",
-    "       note that `phi` is mandatory. If the gmf doesn't need `phi`, you have to explicitely set `phi=None` kwarg. \n",
-    "    \n",
-    "  * all parameters must be **float**. numpy array are not allowed. `xsarsea.windspeed` will vectorize the function with numba to allow numpy arrays.\n",
-    "  * returned sigma0 must be **linear**, not dB.\n",
-    "  * function name must start with `gmf_`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9df92906-aa9d-47da-a986-c31b3a6cc00b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@windspeed.gmfs.GmfModel.register(inc_range=[17., 50.], wspd_range=[3., 80.], pol='VH', units='linear')\n",
-    "def gmf_dummy(inc, wspd, phi=None): \n",
-    "    a0 = 0.00013106836021008122\n",
-    "    a1 = -4.530598283705591e-06\n",
-    "    a2 = 4.429277425062766e-08\n",
-    "    b0 = 1.3925444179360706\n",
-    "    b1 = 0.004157838450541205\n",
-    "    b2 = 3.4735809771069953e-05\n",
-    "\n",
-    "    a = a0 + a1 * inc + a2 * inc ** 2\n",
-    "    b = b0 + b1 * inc + b2 * inc ** 2\n",
-    "    sig = a * wspd ** b\n",
-    "\n",
-    "    return sig\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbb8b041-3030-439c-b632-1100aea51967",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xx =gmf_dummy(np.arange(20,22), np.arange(10,12))\n",
-    "print(xx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7576513-14b3-48db-86d1-2089c50fb65c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "windspeed_co, windspeed_dual = windspeed.invert_from_model(\n",
-    "        sarwing_ds.owiIncidenceAngle,\n",
-    "        sarwing_ds.owiNrcs,\n",
-    "        sarwing_ds.owiNrcs_cross,\n",
-    "        ancillary_wind=sarwing_ds.owi_ancillary_wind,\n",
-    "        dsig_cr=dsig_cr,\n",
-    "        model=('gmf_cmod5n', gmf_dummy))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bb0195b-f966-4c80-8ba2-635dd42dc807",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "windspeed_diff = windspeed_dual - sarwing_ds.owiWindSpeed_Tab_dualpol_2steps\n",
-    "(\n",
-    "    (hv.Image(windspeed_dual).opts(title='xsarsea') + \n",
-    "     hv.Image(sarwing_ds.owiWindSpeed_Tab_dualpol_2steps).opts(title='sarwing' )).opts(hv.opts.Image(cmap='jet', clim=(0,50))) +  \n",
-    "    hv.Image(windspeed_diff).opts(cmap='jet', clim=(-5,5), title='xsarsea-sarwing')\n",
-    ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5570ea84-43c4-4c88-885f-8e69dac0f32d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
