xsarsea and windspeed improvements (#21)
* allow mixed 2D/scalar input for GmfModel.__call__

*  added gmf_cmodIfr2. Use it in sigma0_detrend

* allow broadcast for model __call__ to keep sames dimensions

* better logging messages and timing decorator

* docstring and examples.

--- a/docs/examples/xsarsea.ipynb
+++ b/docs/examples/xsarsea.ipynb
@@ -42,6 +42,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# optional debug message\n",
+    "import logging\n",
+    "logging.basicConfig()\n",
+    "logging.getLogger('xsarsea').setLevel(logging.INFO) # .setLevel(logging.DEBUG) for more messages"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,7 +79,7 @@
    "outputs": [],
    "source": [
     "# open the dataset with xsar\n",
-    "sar_ds = xsar.open_dataset(filename, resolution={'atrack':10,'xtrack':10})\n",
+    "sar_ds = xsar.open_dataset(filename, resolution='1000m')\n",
     "sar_ds[['sigma0','incidence']]\n"
    ]
   },
@@ -88,8 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sar_ds['sigma0'] = sar_ds.sigma0.persist()\n",
-    "sar_ds['sigma0_detrend'] = xsarsea.sigma0_detrend(sar_ds.sigma0, sar_ds.incidence).persist()"
+    "sar_ds['sigma0'] = sar_ds.sigma0\n",
+    "sar_ds['sigma0_detrend'] = xsarsea.sigma0_detrend(sar_ds.sigma0, sar_ds.incidence)"
    ]
   },
   {
@@ -98,28 +110,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rasterize(hv.Image(sar_ds.sigma0.sel(pol='VV')).opts(cmap='gray',colorbar=True,tools=['hover'],title=\"original sigma0\")) \\\n",
-    "    + rasterize(hv.Image(sar_ds.sigma0_detrend.sel(pol='VV')).opts(cmap='gray',colorbar=True,tools=['hover'],title=\"detrended sigma0\"))"
+    "(\n",
+    "    hv.Image(sar_ds.sigma0.sel(pol='VV')).opts(title=\"original sigma0\") \\\n",
+    "    + hv.Image(sar_ds.sigma0_detrend.isel(pol=0)).opts(title=\"detrended sigma0\")\n",
+    ").opts(hv.opts.Image(cmap='gray', clim=(0,0.4)))"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
