switched gradients direction to image convention (0 rad = xtrack)

--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -128,8 +128,7 @@
     "streaks_geo['weight'] = streaks['weight']\n",
     "\n",
     "# convert directions from image convention to geographic convention\n",
-    "# note that there is no clockwise swapping, because image axes are transposed\n",
-    "streaks_geo['streaks_dir'] =  np.rad2deg(streaks['angle']) + streaks_geo['ground_heading']\n",
+    "streaks_geo['streaks_dir'] =  xsarsea.dir_xtrack_to_geo(streaks['angle'], streaks_geo['ground_heading']) \n",
     "\n",
     "streaks_geo = streaks_geo.compute()\n",
     "\n",
@@ -141,8 +140,7 @@
     "        np.pi/2 -np.deg2rad(streaks_geo['streaks_dir']), \n",
     "        streaks_geo['weight']\n",
     "    )\n",
-    ").opts(pivot='mid', arrow_heads=False, tools=['hover'], magnitude='Magnitude')\n",
-    "\n"
+    ").opts(pivot='mid', arrow_heads=False, tools=['hover'], magnitude='Magnitude')"
    ]
   },
   {
@@ -189,7 +187,7 @@
    "source": [
     "### streaks\n",
     "\n",
-    "`streaks_geo` was computed from `streaks` (also a `xarray.Dataset`). The main difference is that the `angle` variable from `streaks` is in radians, in *image convention* (ie rad=0 is in atrack direction) \n",
+    "`streaks_geo` was computed from `streaks` (also a `xarray.Dataset`). The main difference is that the `angle` variable from `streaks` is in radians, in *image convention* (ie rad=0 is in xtrack direction) \n",
     "\n"
    ]
   },
@@ -208,16 +206,9 @@
    "id": "2c42c677",
    "metadata": {},
    "source": [
-    "#### Convertion from image convention to geographic convention\n",
+    "#### Convertion between image convention and geographic convention\n",
     "\n",
-    "```python\n",
-    "angle_geo = np.rad2deg(angle_img) + ground_heading\n",
-    "```\n",
-    "\n",
-    "#### Conversion from geographic convention to image convention\n",
-    "```python\n",
-    "angle_img = np.deg2rad(angle_geo - ground_heading)\n",
-    "```\n",
+    "see [xsarsea.dir_geo_to_xtrack](../basic_api.rst#xsarsea.dir_geo_to_xtrack) and [xsarsea.dir_xtrack_to_geo](../basic_api.rst#xsarsea.dir_xtrack_to_geo)\n",
     "\n"
    ]
   },
@@ -281,7 +272,7 @@
    "source": [
     "# background image for vectorfield\n",
     "s0 = sar_ds['sigma0_detrend'].sel(pol='VV')\n",
-    "hv_img = rasterize(hv.Image(s0).opts(cmap='gray',clim=(0,np.nanpercentile(s0,95))))\n",
+    "hv_img = rasterize(hv.Image(s0, kdims=['xtrack', 'atrack']).opts(cmap='gray',clim=(0,np.nanpercentile(s0,95))))\n",
     "\n",
     "\n",
     "plot_mean_smooth = xsarsea.gradients.PlotGradients(hist_mean_smooth)\n",
