--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "Ecmwf wind is stored in owi file in *geographical* (deg N/S) convention. `xsarsea.windspeed` need it relative to *xtrack* (ie antenna), as a complex number.\n",
     "\n",
-    "We use [xsarsea.geo_dir_to_xtrack](../basic_api.rst#xsarsea.geo_dir_to_xtrack) to convert `sarwing_ds.owiEcmwfWindDirection` (deg) to radians, relative to xtrack, using `sarwing_ds.owiHeading`\n"
+    "We use [xsarsea.dir_geo_to_xtrack](../basic_api.rst#xsarsea.dir_geo_to_xtrack) to convert `sarwing_ds.owiEcmwfWindDirection` (deg) to radians, relative to xtrack, using `sarwing_ds.owiHeading`\n"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "owi_ecmwf_wind = sarwing_ds.owiEcmwfWindSpeed * np.exp(1j* xsarsea.geo_dir_to_xtrack(sarwing_ds.owiEcmwfWindDirection, sarwing_ds.owiHeading))\n",
+    "owi_ecmwf_wind = sarwing_ds.owiEcmwfWindSpeed * np.exp(1j* xsarsea.dir_geo_to_xtrack(sarwing_ds.owiEcmwfWindDirection, sarwing_ds.owiHeading))\n",
     "sarwing_ds = xr.merge([\n",
     "    sarwing_ds,\n",
     "    owi_ecmwf_wind.to_dataset(name='owi_ancillary_wind'),\n",
@@ -113,7 +113,7 @@
     "vectorfield = hv.VectorField(\n",
     "    (\n",
     "        sub_sarwing_ds.xtrack, sub_sarwing_ds.atrack,\n",
-    "        xsarsea.geo_dir_to_xtrack(sub_sarwing_ds.owiEcmwfWindDirection, sub_sarwing_ds.owiHeading),\n",
+    "        xsarsea.dir_geo_to_xtrack(sub_sarwing_ds.owiEcmwfWindDirection, sub_sarwing_ds.owiHeading),\n",
     "        sub_sarwing_ds.owiEcmwfWindSpeed\n",
     "    )\n",
     ")\n",
