--- a/docs/examples/gmfs_and_luts.ipynb
+++ b/docs/examples/gmfs_and_luts.ipynb
@@ -22,12 +22,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# optional debug messages\n",
+    "import logging\n",
+    "logging.basicConfig()\n",
+    "logging.getLogger('xsarsea.windspeed').setLevel(logging.DEBUG) # or .setLevel(logging.INFO)\n",
+    "\n",
     "import xsar\n",
     "from xsarsea import windspeed\n",
     "import xarray as xr\n",
     "import numpy as np\n",
     "import holoviews as hv\n",
     "hv.extension('bokeh')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27a51045-9315-45f0-b4d4-df3b3cad27ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# optional debug messages\n",
+    "#import logging\n",
+    "#logging.basicConfig()\n",
+    "#logging.getLogger('xsarsea.windspeed').setLevel(logging.DEBUG) # or .setLevel(logging.INFO)"
    ]
   },
   {
@@ -175,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@windspeed.gmfs.GmfModel.register(inc_range=[17., 50.], wspd_range=[3., 80.], pol='VH', units='linear')\n",
+    "@windspeed.gmfs.GmfModel.register(wspd_range=[3., 80.], pol='VH', units='linear')\n",
     "def gmf_dummy(inc, wspd, phi=None): \n",
     "    a0 = 0.00013106836021008122\n",
     "    a1 = -4.530598283705591e-06\n",
@@ -183,9 +201,11 @@
     "    b0 = 1.3925444179360706\n",
     "    b1 = 0.004157838450541205\n",
     "    b2 = 3.4735809771069953e-05\n",
+    "    \n",
     "\n",
     "    a = a0 + a1 * inc + a2 * inc ** 2\n",
     "    b = b0 + b1 * inc + b2 * inc ** 2\n",
+    "    \n",
     "    sig = a * wspd ** b\n",
     "\n",
     "    return sig"
@@ -248,7 +268,7 @@
     "        dim_range=dict(incidence=(17,50))\n",
     "    else:\n",
     "        kdims=['incidence', 'phi']\n",
-    "        dim_range=dict(incidence=(17,50), phi=(0,180))\n",
+    "        dim_range=dict(incidence=(17,50), phi=(0,360))\n",
     "    \n",
     "    def model_curve(incidence, phi=None):\n",
     "        if 'phi' not in luts[0].dims:\n",
@@ -280,6 +300,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "837d7544-d2fd-44b6-8842-14dde8a30036",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "windspeed.get_model('gmf_dummy').to_lut()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8672da53-274e-42ed-be1a-72a7a47e8315",
    "metadata": {},
    "outputs": [],
@@ -306,6 +336,14 @@
    "source": [
     "model_compare([ 'gmf_cmod5n', 'gmf_cmod5' ])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bb443e1-9d23-4de9-8649-ee11e345dd85",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
