--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -35,7 +35,7 @@
     "# optional debug messages\n",
     "import logging\n",
     "logging.basicConfig()\n",
-    "logging.getLogger('xsarsea.windspeed').setLevel(logging.INFO) # or .setLevel(logging.DEBUG)"
+    "logging.getLogger('xsarsea.windspeed').setLevel(logging.DEBUG) # or .setLevel(logging.INFO)"
    ]
   },
   {
@@ -172,7 +172,7 @@
     "        hv.Image(windspeed_co, kdims=['xtrack','atrack']).opts(title='xsarsea') \n",
     "        + hv.Image(sarwing_ds.owiWindSpeed_Tab_copol, kdims=['xtrack','atrack']).opts(title='sarwing' )\n",
     "    ).opts(hv.opts.Image(cmap='jet', clim=(0,50))) \n",
-    "    + hv.Image(windspeed_diff, kdims=['xtrack','atrack']).opts(cmap='jet', clim=(-0.2,0.2), title='xsarsea-sarwing')\n",
+    "    + hv.Image(windspeed_diff, kdims=['xtrack','atrack']).opts(cmap='jet', clim=(-0.5,0.5), title='xsarsea-sarwing\\nmean=%.4f std=%.4f' % (np.mean(windspeed_diff), np.std(windspeed_diff)))\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
   },
@@ -292,6 +292,14 @@
     "    hv.Image(windspeed_diff).opts(cmap='jet', clim=(-0.2,0.2), title='xsarsea-sarwing')\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ed186e0-9878-4493-922c-7f8d7f9b2786",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
