--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -289,17 +289,9 @@
     "(\n",
     "    (hv.Image(windspeed_dual).opts(title='xsarsea') + \n",
     "     hv.Image(sarwing_ds.owiWindSpeed_Tab_dualpol_2steps).opts(title='sarwing' )).opts(hv.opts.Image(cmap='jet', clim=(0,50))) +  \n",
-    "    hv.Image(windspeed_diff).opts(cmap='jet', clim=(-0.2,0.2), title='xsarsea-sarwing')\n",
+    "    hv.Image(windspeed_diff).opts(cmap='jet', clim=(-0.4,0.4), title='xsarsea-sarwing\\nmean=%.4f std=%.4f' % (np.mean(windspeed_diff), np.std(windspeed_diff)))\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ed186e0-9878-4493-922c-7f8d7f9b2786",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
