--- a/docs/examples/gmfs_and_luts.ipynb
+++ b/docs/examples/gmfs_and_luts.ipynb
@@ -182,7 +182,7 @@
     "       note that `phi` is mandatory. If the gmf doesn't need `phi`, you have to explicitely set `phi=None` kwarg. \n",
     "    \n",
     "  * all parameters must be **float**. numpy array are not allowed. `xsarsea.windspeed` will vectorize the function with numba to allow numpy arrays.\n",
-    "  * returned sigma0 must be **linear**, not dB.\n",
+    "  * allowed units are `linear` or `dB`\n",
     "  * function name must start with `gmf_`"
    ]
   },
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@windspeed.gmfs.GmfModel.register(wspd_range=[3., 80.], pol='VH', units='linear')\n",
+    "@windspeed.gmfs.GmfModel.register(pol='VH', units='linear')\n",
     "def gmf_dummy(inc, wspd, phi=None): \n",
     "    a0 = 0.00013106836021008122\n",
     "    a1 = -4.530598283705591e-06\n",
