alias for models, available_models now a dataframe, better res handling for nc luts.

--- a/docs/examples/gmfs_and_luts.ipynb
+++ b/docs/examples/gmfs_and_luts.ipynb
@@ -22,11 +22,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# optional debug messages\n",
-    "import logging\n",
-    "logging.basicConfig()\n",
-    "logging.getLogger('xsarsea.windspeed').setLevel(logging.DEBUG) # or .setLevel(logging.INFO)\n",
-    "\n",
     "import xsar\n",
     "from xsarsea import windspeed\n",
     "import xarray as xr\n",
@@ -43,9 +38,9 @@
    "outputs": [],
    "source": [
     "# optional debug messages\n",
-    "#import logging\n",
-    "#logging.basicConfig()\n",
-    "#logging.getLogger('xsarsea.windspeed').setLevel(logging.DEBUG) # or .setLevel(logging.INFO)"
+    "import logging\n",
+    "logging.basicConfig()\n",
+    "logging.getLogger('xsarsea.windspeed').setLevel(logging.DEBUG) # or .setLevel(logging.INFO)"
    ]
   },
   {
@@ -65,6 +60,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "windspeed.available_models()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "473e8034-d517-405a-9ca6-1774db35c5fb",
+   "metadata": {},
+   "source": [
+    "### Adding netcdf models (LUT)\n",
+    "\n",
+    "Netcdf models are not available by default, because they needs to be loaded from external file with [xsarsea.windspeed.register_all_nc_luts](../basic_api.rst#xsarsea.windspeed.register_all_nc_luts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "271b3daa-9f41-49a3-a496-1b4a0a311c84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nc_luts_path = xsar.get_test_file('xsarsea_luts')\n",
+    "windspeed.register_all_nc_luts(nc_luts_path)\n",
     "windspeed.available_models()"
    ]
   },
@@ -111,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmod5 = windspeed.get_model('gmf_cmod5')\n",
+    "cmod5 = windspeed.get_model('cmod5')\n",
     "cmod5"
    ]
   },
@@ -261,7 +278,7 @@
     "\n",
     "def model_compare(compare_models):\n",
     "    \n",
-    "    luts = [ windspeed.available_models()[name].to_lut(units='dB')  for name in compare_models]\n",
+    "    luts = [ windspeed.get_model(name).to_lut(units='dB')  for name in compare_models]\n",
     "    \n",
     "    if 'phi' not in luts[0].dims:\n",
     "        kdims=['incidence']\n",
@@ -304,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_compare([ 'gmf_dummy', 'sarwing_lut_cmodms1ahw' ])"
+    "model_compare([ 'gmf_dummy', 'sarwing_lut_cmodms1ahw'] )"
    ]
   },
   {
@@ -324,8 +341,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_compare([ 'gmf_cmod5n', 'gmf_cmod5' ])"
+    "model_compare([ 'gmf_cmod5n', 'gmf_cmod5', 'cmodifr2'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78f4b231-1815-446e-8f0b-afc589e28988",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
