--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -148,7 +148,7 @@
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        ancillary_wind = sarwing_ds.owi_ancillary_wind,\n",
-    "        model='gmf_cmod5n')\n"
+    "        model='cmod5n')\n"
    ]
   },
   {
@@ -183,9 +183,9 @@
    "source": [
     "## Crosspol inversion\n",
     "\n",
-    "Sarwing crosspol inversion is done with model `sarwing_lut_cmodms1ahw`, that is only available from lut.\n",
+    "Sarwing crosspol inversion is done with model `cmodms1ahw`, that is only available from lut.\n",
     "\n",
-    "So we use [xsarsea.windspeed.register_all_sarwing_luts](../basic_api.rst#xsarsea.windspeed.register_all_sarwing_luts) to register this lut.\n"
+    "So we use [xsarsea.windspeed.register_all_nc_luts](../basic_api.rst#xsarsea.windspeed.register_all_nc_luts) to register this lut.\n"
    ]
   },
   {
@@ -195,8 +195,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sarwing_luts_subset_path = xsarsea.get_test_file('sarwing_luts_subset')\n",
-    "windspeed.sarwing_luts.register_all_sarwing_luts(sarwing_luts_subset_path)"
+    "nc_luts_path = xsarsea.get_test_file('xsarsea_luts')\n",
+    "windspeed.register_all_nc_luts(nc_luts_path)"
    ]
   },
   {
@@ -222,7 +222,7 @@
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs_cross,\n",
     "        dsig_cr=dsig_cr,\n",
-    "        model='sarwing_lut_cmodms1ahw')"
+    "        model='cmodms1ahw')"
    ]
   },
   {
@@ -267,7 +267,7 @@
     "        sarwing_ds.owiNrcs_cross,\n",
     "        ancillary_wind=sarwing_ds.owi_ancillary_wind,\n",
     "        dsig_cr = dsig_cr,\n",
-    "        model=('gmf_cmod5n','sarwing_lut_cmodms1ahw'))"
+    "        model=('cmod5n','cmodms1ahw'))"
    ]
   },
   {
