removed cmodifr2 from lut example

--- a/docs/examples/gmfs_and_luts.ipynb
+++ b/docs/examples/gmfs_and_luts.ipynb
@@ -341,7 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_compare([ 'gmf_cmod5n', 'gmf_cmod5', 'cmodifr2'])"
+    "model_compare([ 'gmf_cmod5n', 'gmf_cmod5'])"
    ]
   },
   {
