also return wind direction in invert_from_model

--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -94,6 +94,8 @@
    "source": [
     "## Ancillary wind control plot\n",
     "\n",
+    "### Directions in default convention\n",
+    "\n",
     "We check that ancillary wind is correct, by plotting the wind speed, the wind direction, and the wind direction components.\n",
     "\n",
     "The *xtrack* component increase with *xtrack* axis, and *atrack* component increase with *atrack*.\n",
@@ -124,7 +126,35 @@
     "    hv.Image(sarwing_ds.owiEcmwfWindSpeed, kdims=['xtrack','atrack']).opts(title='speed and dir', clim=(0,50), cmap='jet') * vectorfield\n",
     "    + hv.Image(owi_ecmwf_wind_xtrack, kdims=['xtrack','atrack']).opts(title='xtrack component',cmap='bwr') * vectorfield\n",
     "    + hv.Image(owi_ecmwf_wind_atrack, kdims=['xtrack','atrack']).opts(title='atrack component',cmap='bwr') * vectorfield\n",
-    ")"
+    ").opts(title='Direction component in standard convention')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41d3e477-a0fc-43cb-b356-927339873f8f",
+   "metadata": {},
+   "source": [
+    "### Directions in gmf or lut convention\n",
+    "\n",
+    "In gmf or lut, the xtrack wind direction component is **negative** if the wind vector is in the same direction as increasing xtrack, and atrack component is  **positive**  if if the wind vector is in the same direction as increasing atrack.\n",
+    "\n",
+    "Switching to one convention to another can be done with `-np.conj(complex_dir)`\n",
+    "\n",
+    "Note that in `xsarsea.windspeed`,  all directions are in **gmf or lut convention**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d7ae283-21cd-4e72-9466-7ca0a21279fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    hv.Image(sarwing_ds.owiEcmwfWindSpeed, kdims=['xtrack','atrack']).opts(title='speed and dir', clim=(0,50), cmap='jet') * vectorfield\n",
+    "    + hv.Image(-owi_ecmwf_wind_xtrack, kdims=['xtrack','atrack']).opts(title='xtrack component',cmap='bwr') * vectorfield\n",
+    "    + hv.Image(owi_ecmwf_wind_atrack, kdims=['xtrack','atrack']).opts(title='atrack component',cmap='bwr') * vectorfield\n",
+    ").opts(title='Direction component in gmf or lut convention')"
    ]
   },
   {
@@ -147,7 +177,7 @@
     "windspeed_co = windspeed.invert_from_model(\n",
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
-    "        ancillary_wind = sarwing_ds.owi_ancillary_wind,\n",
+    "        ancillary_wind = -np.conj(sarwing_ds.owi_ancillary_wind),\n",
     "        model='cmod5n')\n"
    ]
   },
@@ -166,10 +196,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "windspeed_diff = windspeed_co - sarwing_ds.owiWindSpeed_Tab_copol\n",
+    "windspeed_diff =np.abs(windspeed_co) - sarwing_ds.owiWindSpeed_Tab_copol\n",
     "(\n",
     "    (\n",
-    "        hv.Image(windspeed_co, kdims=['xtrack','atrack']).opts(title='xsarsea') \n",
+    "        hv.Image(np.abs(windspeed_co), kdims=['xtrack','atrack']).opts(title='xsarsea') \n",
     "        + hv.Image(sarwing_ds.owiWindSpeed_Tab_copol, kdims=['xtrack','atrack']).opts(title='sarwing' )\n",
     "    ).opts(hv.opts.Image(cmap='jet', clim=(0,50))) \n",
     "    + hv.Image(windspeed_diff, kdims=['xtrack','atrack']).opts(cmap='jet', clim=(-0.5,0.5), title='xsarsea-sarwing\\nmean=%.4f std=%.4f' % (np.mean(windspeed_diff), np.std(windspeed_diff)))\n",
@@ -222,7 +252,8 @@
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs_cross,\n",
     "        dsig_cr=dsig_cr,\n",
-    "        model='cmodms1ahw')"
+    "        model='cmodms1ahw')\n",
+    "windspeed_cr = np.abs(windspeed_cr)"
    ]
   },
   {
@@ -265,9 +296,11 @@
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        sarwing_ds.owiNrcs_cross,\n",
-    "        ancillary_wind=sarwing_ds.owi_ancillary_wind,\n",
+    "        ancillary_wind=-np.conj(sarwing_ds.owi_ancillary_wind),\n",
     "        dsig_cr = dsig_cr,\n",
-    "        model=('cmod5n','cmodms1ahw'))"
+    "        model=('cmod5n','cmodms1ahw'))\n",
+    "windspeed_co = np.abs(windspeed_co)\n",
+    "windspeed_dual =  np.abs(windspeed_dual)"
    ]
   },
   {
@@ -296,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1904db85-4dd1-4a13-a6ad-a6f20b578541",
+   "id": "d21b329b-0218-4b81-8994-0e9317fe11a7",
    "metadata": {},
    "outputs": [],
    "source": []
